[project]
name = "blog-cli"
version = "0.1.0"
description = "dynamic-blog 로컬 발행 CLI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "python-frontmatter>=1.1.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
blog = "blog.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blog"]
